# template-cpp

./: CMakeLists.txt
include/: zipfs.h
src/: CMakeLists.txt  balling.txt  main_zipfs_algorithms.cpp  main_zipfs_containers.cpp  text.txt
tests/: CMakeLists.txt  test_zipfs.cpp
